<?xml version="1.0" encoding="utf-8"?>
<remote-actions
    actionset_label="@string/app_name"
    version="1.2">
    <action
        id="lnreader_next_page"
        label="@string/spen_next_page"
        priority="1"
        repeatable="true"
        repeatable_interval="short"
        trigger_key="DPAD_RIGHT">
        <preference
            name="gesture"
            value="click" />
    </action>
    <action
        id="lnreader_previous_page"
        label="@string/spen_previous_page"
        priority="2"
        repeatable="true"
        repeatable_interval="short"
        trigger_key="DPAD_LEFT">
        <preference
            name="gesture"
            value="double_click" />
    </action>
    <action
        id="lnreader_back"
        label="@string/spen_back"
        priority="3"
        repeatable="true"
        repeatable_interval="short"
        trigger_key="BACK">
        <preference
            name="gesture"
            value="circle_ccw" />
    </action>
    <action
        id="lnreader_next_chapter"
        label="@string/spen_next_chapter"
        priority="4"
        repeatable="true"
        repeatable_interval="short"
        trigger_key="N">
        <preference
            name="gesture"
            value="swipe_left" />
    </action>
    <action
        id="lnreader_previous_chapter"
        label="@string/spen_previous_chapter"
        priority="5"
        repeatable="true"
        repeatable_interval="short"
        trigger_key="P">
        <preference
            name="gesture"
            value="swipe_right" />
    </action>
    <action
        id="lnreader_toggle_menu"
        label="@string/spen_toggle_menu"
        priority="6"
        repeatable="true"
        repeatable_interval="short"
        trigger_key="M">
        <preference
            name="gesture"
            value="circle_cw" />
    </action>
</remote-actions>
